--- a/patents/src/main/resources/application-dev.properties
+++ b/patents/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
-cloud.aws.credentials.access-key=AKIAZFNVDIXIPCPAYJ56
-cloud.aws.credentials.secret-key=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
+cloud.aws.credentials.access-key=
+cloud.aws.credentials.secret-key=
 
-cloud.aws.user.credentials.access-key=AKIAZFNVDIXIJZXBVCPD
-cloud.aws.user.credentials.secret-key=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
+cloud.aws.user.credentials.access-key=
+cloud.aws.user.credentials.secret-key=
 
 cloud.aws.region=us-west-1
 cloud.aws.serviceEndPoint=dynamodb.us-west-1.amazonaws.com
